--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,20 +3,15 @@
     "moduleResolution": "NodeNext",
     "target": "ES2020",
     "lib": ["ES2020", "DOM"],
-    "noImplicitAny": true,
     "noImplicitThis": true,
-    "strictNullChecks": false,
-    "strict": true,
-    "noEmit": true,
+    "emitDeclarationOnly": true,
+    "strictNullChecks": true,
     "sourceMap": true,
     "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "declarationMap": true,
     "declarationDir": "dist/types",
-    "typeRoots": ["node_modules/@types"]
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
-  "outDir": "./dist",
-  "include": ["src"],
-  "exclude": ["**/*.spec.ts", "dist"]
+  "include": ["src"]
 }
