--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,8 @@
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off"
   }
 }
