--- a/package.json
+++ b/package.json
@@ -2,17 +2,7 @@
   "name": "@djthoms/formulize",
   "version": "0.1.0",
   "description": "formula UI generator",
-  "keywords": [
-    "plugin",
-    "formula",
-    "equasion",
-    "math",
-    "generator",
-    "builder",
-    "wyswyg",
-    "jquery",
-    "pignose"
-  ],
+  "keywords": [],
   "homepage": "https://github.com/KennethanCeyer/formulize#readme",
   "bugs": {
     "url": "https://github.com/KennethanCeyer/formulize/issues"
@@ -61,14 +51,15 @@
   "devDependencies": {
     "@djthoms/eslint-config": "^6.0.1",
     "@djthoms/prettier-config": "^4.3.0",
-    "@types/jquery": "^3.5.16",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^6.1.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^20.5.1",
     "@vitest/coverage-v8": "^0.34.2",
     "esbuild": "^0.19.2",
     "fd-find": "^1.2.0",
     "husky": "^8.0.3",
-    "jquery": "^3.7.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^14.0.1",
     "lodash.camelcase": "^4.3.0",
