--- a/package.json
+++ b/package.json
@@ -1,52 +1,8 @@
 {
-  "name": "@djthoms/formulize",
-  "version": "0.1.0",
-  "description": "formula UI generator",
-  "keywords": [],
-  "homepage": "https://github.com/KennethanCeyer/formulize#readme",
-  "bugs": {
-    "url": "https://github.com/KennethanCeyer/formulize/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KennethanCeyer/formulize.git"
-  },
-  "license": "MIT",
-  "author": "PIGNOSE",
-  "main": "./dist/cjs/formulize.js",
-  "module": "./dist/esm/formulize.js",
-  "types": "dist/types/formulize.d.ts",
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    ".": {
-      "types": "./dist/types/formulize.d.ts",
-      "import": "./dist/esm/formulize.js",
-      "require": "./dist/cjs/formulize.js"
-    },
-    "./style": {
-      "import": "./dist/style/formulize.css",
-      "require": "./dist/style/formulize.css"
-    }
-  },
+  "name": "root",
+  "private": true,
   "scripts": {
-    "prepare": "husky install",
-    "lint": "eslint 'src/**/*.{ts,js}'",
-    "lint:fix": "pnpm lint --fix",
-    "prebuild": "rm -rf dist",
-    "build": "npm-run-all -p build:*",
-    "build:cjs": "esbuild --sourcemap --outdir=dist/cjs --format=cjs --target=node18 `./scripts/fd.sh`",
-    "build:esm": "esbuild --sourcemap --outdir=dist/esm --format=esm --target=node18 `./scripts/fd.sh`",
-    "build:types": "tsc",
-    "build:sass": "sass style/formulize.scss dist/style/formulize.css",
-    "pretest": "pnpm build:sass",
-    "test": "vitest --run",
-    "posttest": "rm style/*.css*",
-    "check-types": "tsc --emitDeclarationOnly null --noEmit"
-  },
-  "dependencies": {
-    "metric-parser": "^0.0.12"
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@djthoms/eslint-config": "^6.0.1",
@@ -57,16 +13,9 @@
     "@types/jsdom": "^21.1.1",
     "@types/node": "^20.5.1",
     "@vitest/coverage-v8": "^0.34.2",
-    "esbuild": "^0.19.2",
-    "fd-find": "^1.2.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "lint-staged": "^14.0.1",
-    "lodash.camelcase": "^4.3.0",
-    "npm-run-all": "^4.1.5",
-    "sass": "^1.66.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
     "vitest": "^0.34.2"
   }
 }
