--- a/packages/formulize/package.json
+++ b/packages/formulize/package.json
@@ -45,9 +45,11 @@
     "check-types": "tsc --emitDeclarationOnly null --noEmit"
   },
   "dependencies": {
+    "deepmerge": "^4.3.1",
     "metric-parser": "^0.0.12"
   },
   "devDependencies": {
+    "@types/deepmerge": "^2.2.0",
     "esbuild": "^0.19.2",
     "fd-find": "^1.2.0",
     "lodash.camelcase": "^4.3.0",
