--- a/packages/formulize/tsconfig.build.json
+++ b/packages/formulize/tsconfig.build.json
@@ -14,5 +14,6 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["*.spec.*", "*.test.*"]
 }
