--- a/packages/formulize/package.json
+++ b/packages/formulize/package.json
@@ -50,8 +50,10 @@
   },
   "devDependencies": {
     "@types/deepmerge": "^2.2.0",
+    "@types/jquery": "^3.5.17",
     "esbuild": "^0.19.2",
     "fd-find": "^1.2.0",
+    "jquery": "^3.7.1",
     "lodash.camelcase": "^4.3.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.66.1",
