--- a/packages/formulize/package.json
+++ b/packages/formulize/package.json
@@ -22,13 +22,19 @@
     "./style": {
       "import": "./dist/style/formulize.css",
       "require": "./dist/style/formulize.css"
+    },
+    "./sass": {
+      "types": "./style/sass.d.ts",
+      "import": "./style/formulize.scss",
+      "require": "./style/formulize.scss"
     }
   },
   "main": "./dist/cjs/formulize.js",
   "module": "./dist/esm/formulize.js",
   "types": "dist/types/formulize.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "style"
   ],
   "scripts": {
     "lint": "eslint 'src/**/*.{ts,js}'",
@@ -49,8 +55,7 @@
     "metric-parser": "^0.0.12"
   },
   "devDependencies": {
-    "@types/deepmerge": "^2.2.0",
-    "@types/jquery": "^3.5.17",
+    "@types/jquery": "^3.5.18",
     "esbuild": "^0.19.2",
     "fd-find": "^1.2.0",
     "jquery": "^3.7.1",
@@ -58,6 +63,6 @@
     "npm-run-all": "^4.1.5",
     "sass": "^1.66.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
