--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "pnpm run -r test"
   },
   "devDependencies": {
     "@djthoms/eslint-config": "^6.1.0",
